--- a/contact.html
+++ b/contact.html
@@ -7,24 +7,69 @@
     <link rel="stylesheet" href="style/contact.css">
     <title>Markuss Priede</title>
 </head>
-<body>
+<div>
     <header class="menu">
         <div class="logo">
             <img style="margin-left: 250px" img src="mplogobez.png" alt="Markuss Priede">
         </div>
-        <a style="margin-left:450px">Home</a>
+        <a href="index.html" style="margin-left:450px">Home</a>
         <a>About</a>
         <a href="https://github.com/MarkussPriede?tab=repositories">Projects</a>
-        <a>Contact me</a>
+        <a href="contact.html">Contact me</a>
     </header>
+    <div class="container">
+        <h1>Sazinies ar mani</h1>
+        <p>Ar lielāko prieku tuvākajā laikā uz Jūsu vēstulēm atbildēšu!</p>
+        <div class="contact-box">
+            <div class="contact-left">
+                <h3>Sūti vēstuli</h3>
+                <form>
 
-    <div class="me">
-        <div class="me-text">
-            <h2>THIS IS ME</h2>
-            <h1>Markuss Priede</h1>
-            <p>Jamal Balls balls</p>
-            <button id="discover" onclick="window.location.href='https://www.linkedin.com/in/mpriede28';">Discover me</button>
+                    <div class="input-row">
+                        <div class="input-group">
+                            <label>Vārds</label>
+                            <input type="text" placeholder="Jānis Bērziņš">
+                        </div>
+                        <div class="input-group">
+                            <label>Tel.nr</label>
+                            <input type="text" placeholder="26702882">
+                        </div>
+                    </div>
+
+                    <div class="input-row">
+                        <div class="input-group">
+                            <label>E-Pasts</label>
+                            <input type="email" placeholder="janisberzins@gmail.com">
+                        </div>
+                        <div class="input-group">
+                            <label>Temats</label>
+                            <input type="text" placeholder="Projekta izstrāde">
+                        </div>
+                    </div>
+
+                    <label>Message</label>
+                    <textarea rows="5" placeholder="Jūsu ziņojums"></textarea>
+                    
+                    <button type="submit">Sūtīt</button>
+                </form>
+            </div>
+            <div class="contact-right">
+                <h3>Sazinies ar mani</h3>
+                
+                <table>
+                    <tr>
+                        <td>E-Pasts</td>
+                        <td>markusspriede@inbox.lv</td>
+                    </tr>
+                    <tr>
+                        <td>Adrese</td>
+                        <td>Krišijāņa Valdemāra iela 1c, Rīga</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
+
+
 </body>
 </html>
