--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img style="margin-left: 250px" img src="mplogobez.png" alt="Markuss Priede">
         </div>
         <a style="margin-left:450px">Home</a>
-        <a>About</a>
+        <a href="https://github.com/MarkussPriede/mans_cv">About</a>
         <a href="https://github.com/MarkussPriede?tab=repositories">Projects</a>
         <a href="contact.html">Contact me</a>
     </header>
